# aptdec

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Makefile  README  README.md  TODO  UPGRADE_GUIDE.md  atpdec.1  build_arm.sh  build_windows.bat  build_windows.sh  cmap.h  color.c  colorpalette.h  common.h  convert.c  dres.c  dsp.c  falsecolor.conf  fcolor.c  filter.c  filter.h  filtercoeff.h  gvipalette.h  image.c  main.c  median.c  messages.h  offsets.h  palette.h  pngio.c  reg.c  satcal.h  temppalette.h  version.h  w32util.c  w32util.h
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: build.yml  debug.yml  release.yml  win_debug.yml  win_release.yml
aptdec-cli/: main.c  pngio.c  pngio.h  util.c  util.h
cmake/: FindLibSndFile.cmake  toolchain-armhf.cmake  toolchain-mingw32.cmake
libaptdec/: algebra.c  algebra.h  calibration.c  calibration.h  color.c  dsp.c  effects.c  filter.c  filter.h  image.c  util.c  util.h
libaptdec/include/: aptdec.h
src/: algebra.c  algebra.h  apt.h  calibration.c  calibration.h  color.c  color.h  common.h  dsp.c  filter.c  filter.h  filtercoeff.h  image.c  image.h  main.c  median.c  offsets.h  pngio.c  pngio.h  reg.c  satcal.h  taps.h  util.c  util.h
src/libs/: median.c  reg.c  reg.h
util/: img2gradient.py  img2pal.py
